tests/ui/generic-associated-types/missing_lifetime_const.stderr
error[E0107]: associated type takes 1 lifetime argument but 0 lifetime arguments were supplied
  --> $DIR/missing_lifetime_const.rs:6:24
   |
LL |     let _: <T as Foo>::Assoc<3>;
   |                        ^^^^^ expected 1 lifetime argument
   |
note: associated type defined here, with 1 lifetime parameter: `'a`
  --> $DIR/missing_lifetime_const.rs:2:10
   |
LL |     type Assoc<'a, const N: usize>;
   |          ^^^^^ --
help: add missing lifetime argument
   |
LL |     let _: <T as Foo>::Assoc<'a, 3>;
   |                              +++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0107`.
